@@ -165,3 +165,6 @@
 * 20100112: "DBEnv->log_file()" use an iterative method to
   calculate the space. Improve it.
 
+* 20100217: When a "Lock" is garbage collected, we leak it
+  and we do not release it.
+
