@@ -13,6 +13,10 @@
     to recompile your code because the changes in the api interface
     structure.
   * Support for "DB_ENV->log_file()", "DB_ENV->log_printf()".
+  * Solve a core dump if something bad happens trying to create a
+    transaction object.
+  * We protect ourselves of failures in creation of Locks and Sequences
+    objects.
 
 4.8.2:
   * Support for "DB_OVERWRITE_DUP", "DB_FOREIGN_ABORT",
